user-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth
  namespace: harmonycloud
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-auth
  template:
    metadata:
      labels:
        app: user-auth
    spec:
      containers:
      - name: user-auth
        image: dbrown1994/harmonycloud-user-auth
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: user-auth
  namespace: harmonycloud
spec:
  selector:
    app: user-auth
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
  type: LoadBalancer
