ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harmonycloud-ingress
  namespace: harmonycloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: harmonycloud.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /music
        pathType: Prefix
        backend:
          service:
            name: music-catalog
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: user-auth
            port:
              number: 80
